Optimized cards for mobile devices

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                       href="#"
                       onclick="navigateToShellHacks(event)"
                       class="project-link"
-                      >View on DevPost →</a
+                      >View Project →</a
                     >
                   </div>
                 </div>
