Updated Software Engineering card in 'What I Do' section

--- a/index.html
+++ b/index.html
@@ -114,34 +114,23 @@
             <!-- Card 2: Software Engineering -->
             <article class="card card-flip">
               <div class="card-flip-inner">
-                <!-- Front -->
                 <div class="card-flip-front">
-                  <h3>Software Engineering</h3>
-                  <p>
-                    Full-stack developer building secure, scalable applications
-                    with modern frameworks. Strong focus on code quality,
-                    maintainability, and security best practices.
-                  </p>
+                  <h3>Software & AI Engineering</h3>
+                    <p>
+                    Full-stack developer building AI-integrated applications like NexusHACK. 
+                    Expert in Model Validation, ensuring AI systems are robust, secure, and accurate.
+                    </p>
                 </div>
-                <!-- Back -->
-                <div class="card-flip-back">
-                  <h3>Technical Stack</h3>
-                  <ul class="skills-list">
-                    <li>
-                      <strong>Languages:</strong> JavaScript, Python, C#, Java,
-                      React
-                    </li>
-                    <li><strong>Backend:</strong> Node.js, Express</li>
-                    <li>
-                      <strong>Databases:</strong> PostgreSQL, MySQL, MongoDB
-                    </li>
-                    <li>
-                      <strong>DevOps:</strong> Git/GitHub, AWS Cloud, VMware
-                    </li>
-                  </ul>
-                </div>
+              <div class="card-flip-back">
+                <h3>Technical Stack</h3>
+                <ul class="skills-list">
+                  <li><strong>Languages:</strong> TypeScript, JavaScript, Python, C#</li>
+                  <li><strong>AI/ML:</strong> Google Gemini API, Model Validation & Testing</li>
+                  <li><strong>Backend:</strong> Node.js, Express, PostgreSQL, MySQL</li>
+                </ul>
               </div>
-            </article>
+            </div>
+          </article>
 
             <!-- Card 3: Knowledge Sharing -->
             <article class="card card-flip">
@@ -747,3 +736,4 @@
     <script src="js/main.js"></script>
   </body>
 </html>
+
