Added AI Validation experience, fixed FlagOps CTF images, and improved responsiveness.

--- a/index.html
+++ b/index.html
@@ -77,92 +77,134 @@
         <div class="container">
           <h2>What I do</h2>
           <div class="cards">
-            <!-- Card 1: Cybersecurity -->
+            <!--CARD 1: CYBERSECURITY-->
             <article class="card card-flip">
               <div class="card-flip-inner">
-                <!-- Front -->
                 <div class="card-flip-front">
+                  <div class="mini-badge">🛡️</div>
                   <h3>Cybersecurity & Defense</h3>
                   <p>
-                    Experienced in network security, threat analysis, and
-                    defensive monitoring. I practice CTFs and build labs to
-                    strengthen my skills in real-world security scenarios.
+                    CompTIA Security+ certified professional focused on SOC
+                    monitoring, network defense, and incident response.
                   </p>
                 </div>
-                <!-- Back -->
                 <div class="card-flip-back">
-                  <h3>Technical Skills</h3>
+                  <h3>Security Focus</h3>
                   <ul class="skills-list">
                     <li>
-                      <strong>Security Tools:</strong> Splunk Enterprise, Nmap,
-                      Wireshark, Packet Tracer
+                      <strong>Tools:</strong> Splunk, Nmap, Wireshark, Packet
+                      Tracer.
                     </li>
                     <li>
-                      <strong>Network Security:</strong> ACLs, VLANs, VPNs,
-                      TCP/IP, DNS
+                      <strong>Defensive:</strong> Threat analysis & SIEM
+                      implementation.
                     </li>
                     <li>
-                      <strong>Systems:</strong> Windows 10/11, Linux (Kali,
-                      Ubuntu, Fedora)
+                      <strong>Network:</strong> VLANs, ACLs, VPNs, and TCP/IP
                     </li>
-                    <li><strong>Cloud Security:</strong> AWS (EC2, S3, IAM)</li>
+                    <li>
+                      <strong>Compliance:</strong> HIPAA-aligned operations
+                    </li>
                   </ul>
                 </div>
               </div>
             </article>
 
-            <!-- Card 2: Software Engineering -->
+            <!--CARD 2: SOFTWARE ENGINEERING-->
             <article class="card card-flip">
               <div class="card-flip-inner">
                 <div class="card-flip-front">
-                  <h3>Software & AI Engineering</h3>
-                    <p>
-                    Full-stack developer building AI-integrated applications like NexusHACK. 
-                    Expert in Model Validation, ensuring AI systems are robust, secure, and accurate.
-                    </p>
-                </div>
-              <div class="card-flip-back">
-                <h3>Technical Stack</h3>
-                <ul class="skills-list">
-                  <li><strong>Languages:</strong> TypeScript, JavaScript, Python, C#</li>
-                  <li><strong>AI/ML:</strong> Google Gemini API, Model Validation & Testing</li>
-                  <li><strong>Backend:</strong> Node.js, Express, PostgreSQL, MySQL</li>
-                </ul>
-              </div>
-            </div>
-          </article>
-
-            <!-- Card 3: Knowledge Sharing -->
-            <article class="card card-flip">
-              <div class="card-flip-inner">
-                <!-- Front -->
-                <div class="card-flip-front">
-                  <h3>Knowledge Sharing</h3>
+                  <div class="mini-badge">⚙️</div>
+                  <h3>Software Engineering</h3>
                   <p>
-                    I believe in giving back to the community. Through my blog,
-                    I share technical insights, CTF solutions, and lessons
-                    learned to help others navigate security and development.
+                    Full-stack developer building scalable applications with a
+                    focus on secure backend architecture and RESTful APIs.
                   </p>
                 </div>
-                <!-- Back -->
                 <div class="card-flip-back">
-                  <h3>What I Write About</h3>
+                  <h3>Development Stack</h3>
                   <ul class="skills-list">
                     <li>
-                      <strong>CTF Write-ups:</strong> Detailed walkthroughs and
-                      methodologies
+                      <strong>Languages:</strong> Node.js, Python, C#, Java
                     </li>
                     <li>
-                      <strong>Security Concepts:</strong> Network protocols,
-                      defense strategies
+                      <strong>Databases:</strong> PostgreSQL, MySQL, MongoDB
                     </li>
                     <li>
-                      <strong>Dev Tutorials:</strong> Building secure, practical
-                      applications
+                      <strong>Scalability:</strong> Optimized systems for 300+
+                      users
                     </li>
                     <li>
-                      <strong>Career Insights:</strong> Breaking into
-                      cybersecurity
+                      <strong>Infrastructure:</strong> AWS (EC2, S3), Docker,
+                      Git
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </article>
+
+            <!--CARD 3: AI & MODEL VALIDATION-->
+            <article class="card card-flip">
+              <div class="card-flip-inner">
+                <div class="card-flip-front">
+                  <div class="mini-badge">🤖</div>
+                  <h3>AI & Model Validation</h3>
+                  <p>
+                    Expert in evaluating AI model outputs for accuracy and
+                    reliability, ensuring safety and consistency in LLMs.
+                  </p>
+                </div>
+                <div class="card-flip-back">
+                  <h3>AI Specialization</h3>
+                  <ul class="skills-list">
+                    <li>
+                      <strong>Expertise:</strong> Model Validation 2 (Expert
+                      Level)
+                    </li>
+                    <li>
+                      <strong>Focus:</strong> Reliability, Accuracy & Safety
+                    </li>
+                    <li>
+                      <strong>API Skills:</strong> Google Gemini Integration
+                    </li>
+                  </ul>
+                  <div class="project-links">
+                    <a href="#experience" class="project-link"
+                      >See Professional Experience →</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </article>
+
+            <!--CARD 4: KNOWLEDGE SHARING-->
+            <article class="card card-flip">
+              <div class="card-flip-inner">
+                <div class="card-flip-front">
+                  <div class="mini-badge">✍️</div>
+                  <h3>Knowledge Sharing</h3>
+                  <p>
+                    Breaking down complex security concepts and technical
+                    walkthroughs into practical, approachable insights.
+                  </p>
+                </div>
+                <div class="card-flip-back">
+                  <h3>Community Focus</h3>
+                  <ul class="skills-list">
+                    <li>
+                      <strong>Write-ups:</strong> Detailed CTF & Lab
+                      documentation
+                    </li>
+                    <li>
+                      <strong>Mentorship:</strong> 30% increase in registration
+                      efficiency
+                    </li>
+                    <li>
+                      <strong>Presentations:</strong> Showcased at ShellHacks &
+                      Expo
+                    </li>
+                    <li>
+                      <strong>Blog:</strong> Security and development tutorials
                     </li>
                   </ul>
                 </div>
@@ -423,11 +465,7 @@
           <h2>FIU FlagOps CTF 2025 - Winner 🏆</h2>
           <div class="modal-body">
             <div class="modal-gallery">
-              <img
-                src="img/flagops-1.png"
-                alt="FIU FlagOps CTF Winner Certificate"
-              />
-              <img src="img/flagops-2.png" alt="FIU FlagOps CTF Competition" />
+              <img src="img/flagops/1.jpg" alt="FIU FlagOps CTF Competition" />
             </div>
             <div class="modal-info">
               <p><strong>Competition:</strong> FIU FlagOps CTF 2025</p>
@@ -582,11 +620,47 @@
       </div>
 
       <!-- EXPERIENCE -->
+      <!-- Handshake AI -->
       <section id="experience" class="section section-alt">
         <div class="container">
           <h2>Experience</h2>
 
           <div class="experience-timeline">
+            <div class="experience-item">
+              <div class="experience-header">
+                <div class="experience-title-group">
+                  <h3>AI Model Validation Associate</h3>
+                  <p class="experience-company">Handshake AI – Remote</p>
+                </div>
+                <p class="experience-date">November 2025 – Present</p>
+              </div>
+              <ul class="experience-bullets">
+                <li>
+                  Earned
+                  <strong>Model Validation Level 2 (Expert)</strong>
+                  certification through successful contribution to a major AI
+                  validation project.
+                </li>
+                <li>
+                  Evaluating AI model outputs for
+                  <strong>accuracy, consistency, and reliability</strong> while
+                  identifying
+                  <strong>complex edge cases and incorrect behaviors</strong>.
+                </li>
+                <li>
+                  Documenting
+                  <strong>validation results and technical findings</strong> to
+                  support the iterative improvement of large-scale AI systems.
+                </li>
+              </ul>
+              <div class="experience-tags">
+                <span class="tag">AI Model Validation</span>
+                <span class="tag">Model Reliability</span>
+                <span class="tag">Data Analysis</span>
+                <span class="tag">LLM Testing</span>
+              </div>
+            </div>
+
             <!-- Keiser University -->
             <div class="experience-item">
               <div class="experience-header">
@@ -736,4 +810,3 @@
     <script src="js/main.js"></script>
   </body>
 </html>
-
