Updated link to the blog web page

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             clarity over complexity—explaining not just the "how," but the
             "why."
           </p>
-          <a href="#" class="btn btn-primary">Read My Blog</a>
+          <a href="https://jaycee-secdev.github.io/tech-blog/" class="btn btn-primary">Read My Blog</a>
           <p class="muted" style="margin-top: 1rem">
             Blog launching soon with regular security and development content.
           </p>
@@ -810,3 +810,4 @@
     <script src="js/main.js"></script>
   </body>
 </html>
+
