Microsoft AZ-500 certification card addition

--- a/index.html
+++ b/index.html
@@ -347,7 +347,11 @@
             clarity over complexity—explaining not just the "how," but the
             "why."
           </p>
-          <a href="https://jaycee-secdev.github.io/tech-blog/" class="btn btn-primary">Read My Blog</a>
+          <a
+            href="https://jaycee-secdev.github.io/tech-blog/"
+            class="btn btn-primary"
+            >Read My Blog</a
+          >
           <p class="muted" style="margin-top: 1rem">
             Blog launching soon with regular security and development content.
           </p>
@@ -369,6 +373,16 @@
                 cybersecurity skills and knowledge.
               </p>
               <p class="achievement-click">Click for details →</p>
+            </div>
+
+            <!-- Microsoft Azure AZ-500 -->
+            <div class="achievement-card">
+              <h3>Microsoft Certified: Azure Security Engineer Associate</h3>
+              <div class="achievement-icon">🌐</div>
+              <p>
+                Currently studying for the AZ-500 exam with a focus on cloud
+                identity, platform protection, and security operations.
+              </p>
             </div>
 
             <!-- FIU FlagOps CTF Winner -->
@@ -810,4 +824,3 @@
     <script src="js/main.js"></script>
   </body>
 </html>
-
