--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
             <div class="achievement-card">
               <h3>Microsoft Certified: Azure Security Engineer Associate</h3>
               <div class="achievement-icon">🌐</div>
+              <p class="achievement-type">Certification In Progress</p>
               <p>
                 Currently studying for the AZ-500 exam with a focus on cloud
                 identity, platform protection, and security operations.
