Microsoft AZ-500 certification card update

--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@
 
             <!-- Microsoft Azure AZ-500 -->
             <div class="achievement-card">
-              <h3>Microsoft Certified: Azure Security Engineer Associate</h3>
               <div class="achievement-icon">🌐</div>
+              <h3>Microsoft AZ-500</h3>
               <p class="achievement-type">Certification In Progress</p>
               <p>
                 Currently studying for the AZ-500 exam with a focus on cloud
