Handshake AI Experience Updated

--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                   <h3>AI Model Validation Associate</h3>
                   <p class="experience-company">Handshake AI – Remote</p>
                 </div>
-                <p class="experience-date">November 2025 – Present</p>
+                <p class="experience-date">November 2025 – January 2026</p>
               </div>
               <ul class="experience-bullets">
                 <li>
