About Me and Writing section update

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <p>
               I'm a cybersecurity master's student at FIU and software engineer
               focused on building secure applications, solving CTF challenges,
-              and sharing what I learn. I break down complex security concepts
-              into practical, approachable insights.
+              and sharing what I learn. I like to break down complex security
+              and development concepts into practical, approachable insights.
             </p>
             <div class="hero-actions">
               <a href="#projects" class="btn btn-primary">View My Work</a>
@@ -342,19 +342,18 @@
         <div class="container">
           <h2>Writing & Blog</h2>
           <p class="section-intro">
-            I write detailed CTF walkthroughs, security tutorials, and project
-            retrospectives to help others learn from my experiences. My goal is
-            clarity over complexity—explaining not just the "how," but the
-            "why."
+            I write about cybersecurity concepts, walkthroughs, and development
+            tips. By sharing my experience in
+            <strong>Software Development</strong>,
+            <strong>Cybersecurity</strong>, and <strong>AI Validation</strong>,
+            I aim to make complex security and development topics approachable
+            for everyone.
           </p>
           <a
             href="https://jaycee-secdev.github.io/tech-blog/"
             class="btn btn-primary"
             >Read My Blog</a
           >
-          <p class="muted" style="margin-top: 1rem">
-            Blog launching soon with regular security and development content.
-          </p>
         </div>
       </section>
 
