Updated Writing & Blog description

--- a/index.html
+++ b/index.html
@@ -346,8 +346,7 @@
             tips. By sharing my experience in
             <strong>Software Development</strong>,
             <strong>Cybersecurity</strong>, and <strong>AI Validation</strong>,
-            I aim to make complex security and development topics approachable
-            for everyone.
+            I want to make security and development approachable for everyone.
           </p>
           <a
             href="https://jaycee-secdev.github.io/tech-blog/"
