Added Logo image

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,6 +8,9 @@
       name="description"
       content="Juan Hernandez – Cybersecurity master's student at FIU & software engineer. I share what I learn about security, CTFs, and tech in simple language."
     />
+
+    <!-- Icon -->
+    <link rel="icon" type="image/png" href="img/Logo.png" />
 
     <!-- Fira Sans -->
     <link
