Updated hero section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Juan Hernandez – Cybersecurity master's student at FIU & software engineer. I share what I learn about security, CTFs, and tech in simple language."
+      content="Juan Hernandez – Cybersecurity master's student at FIU & software engineer. I share what I learn about security, software development, and tech in simple language."
     />
 
     <!-- Icon -->
@@ -59,9 +59,10 @@
             <p class="hero-subtitle">Cybersecurity &amp; Software Engineer</p>
             <p>
               I'm a cybersecurity master's student at FIU and software engineer
-              focused on building secure applications, solving CTF challenges,
-              and sharing what I learn. I like to break down complex security
-              and development concepts into practical, approachable insights.
+              focused on building secure applications, strengthening my
+              cybersecurity knowledge, and sharing what I learn. I like to break
+              down complex security and development concepts into practical,
+              approachable insights.
             </p>
             <div class="hero-actions">
               <a href="#projects" class="btn btn-primary">View My Work</a>
