Updated Knowledge Sharing card

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <p>
               I'm a cybersecurity master's student at FIU and software engineer
               focused on building secure applications, strengthening my
-              cybersecurity knowledge, and sharing what I learn. I like to break
-              down complex security and development concepts into practical,
-              approachable insights.
+              cybersecurity knowledge, and sharing my learning journey. I like
+              to break down complex security and development concepts into
+              practical, approachable insights.
             </p>
             <div class="hero-actions">
               <a href="#projects" class="btn btn-primary">View My Work</a>
@@ -196,12 +196,11 @@
                   <h3>Community Focus</h3>
                   <ul class="skills-list">
                     <li>
-                      <strong>Write-ups:</strong> Detailed CTF & Lab
-                      documentation
+                      <strong>Write-ups:</strong> Sharing my Cybersecurity and
+                      Software Engineering journey, giving tips and tutorials.
                     </li>
                     <li>
-                      <strong>Mentorship:</strong> 30% increase in registration
-                      efficiency
+                      <strong>Mentorship:</strong> INIT Ignite Mentor @ FIU
                     </li>
                     <li>
                       <strong>Presentations:</strong> Showcased at ShellHacks &
